bug: labels dans les TH ne s'affichaient pas bien depuis le refactoring de l'alignement des formulaires
git-svn-id: svn://svn.code.sf.net/p/mediboard/code/trunk@5205 a21d6be2-e512-0410-a060-91f5a2946631

--- a/style/AS400/main.css
+++ b/style/AS400/main.css
@@ -116,7 +116,7 @@ table.form th.category label {
   font-weight: bold;  
   font-style: italic;  
   text-align: center;
-  background-color: #000;
+  background-color: transparent;
 }
 
 table.form th.mandatory {
